EMIdevelopment/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunity Product (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunity Product (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Opportunity_Product2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Product Cost</description>
        <formula>PricebookEntry.Product2.Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically pulled from the Product</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Percent__c</fullName>
        <description>% Margin for this product</description>
        <formula>( TotalPrice -  Total_Cost__c ) /  TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% Margin for this product</inlineHelpText>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>TotalPrice -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Total_Price__c</fullName>
        <formula>Quantity  *   UnitPrice   *  Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maintenance Contract Term (Enter 1 if the Contract is Fixed Term)</description>
        <label>Term (1 if Fixed; Else # of Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total Cost for this item</description>
        <formula>Cost__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total cost for this item</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeed__Project__c)) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
</CustomObject>